--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <td>2022-2023</td>
             <td>Full Stack Developer at ZedPay Company</td>
         </tr>
-        
+
         <tr>
             <td>2021</td>
             <td>Full Stack Developer at Mek Clinic (In the Sony Building)</td>
@@ -66,7 +66,7 @@
                 </tr>                                
     </table>
     <hr>
-    <h3><a href="hobbies.html">My Hobbies</a></h3>
-    <h3><a href="contact-me.html">Contact</a></h3>
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="contact-me.html">Contact</a>
 </body>
 </html>
